--- a/trunk/Data/Locales/de/appetizer.po
+++ b/trunk/Data/Locales/de/appetizer.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Appetizer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-11-19 19:12+0000\n"
-"PO-Revision-Date: 2008-11-19 19:12-0000\n"
-"Last-Translator: Laurent Cozic\n"
+"PO-Revision-Date: 2008-11-19 22:46+0100\n"
+"Last-Translator: Werner Künkel <w.kuenkel@t-online.de>\n"
 "Language-Team: Appetizer Project - Werner Künkel\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -128,7 +128,7 @@ msgstr "Neue Kategorie"
 
 #: IconPanel.cpp:141
 msgid "Add special item"
-msgstr "Spezielle Verzeichnisse hinzufügen"
+msgstr "Windowsfunktionen einbinden"
 
 #: main.cpp:59
 msgid "Use user data directory to save settings."
@@ -609,27 +609,29 @@ msgid ""
 "\n"
 "Please select below where you would like to import your shortcuts from:"
 msgstr ""
+"Dieser Assistent hilft Ihnen beim Import von Verknüpfungen in %s.\n"
+"\n"
+"Quellverzeichnis für den Import wählen:"
 
 #: gui\ImportWizardDialog.cpp:42
 msgid "PortableApps applications"
-msgstr ""
+msgstr "PortableApps Verzeichnis"
 
 #: gui\ImportWizardDialog.cpp:43
 msgid "Windows Quick Launch toolbar"
-msgstr ""
+msgstr "Windows Schnellstartleiste"
 
 #: gui\ImportWizardDialog.cpp:44
 msgid "Windows Start Menu programs"
-msgstr ""
+msgstr "Windows Startmenü - Programme"
 
 #: gui\ImportWizardDialog.cpp:72
 msgid "Start >>"
-msgstr ""
+msgstr "Start >>"
 
 #: gui\ImportWizardDialog.cpp:112
-#, fuzzy
 msgid "Importing shortcuts... Please wait."
-msgstr "Verknüpfungen importieren"
+msgstr "Verknüpfungen werden importiert... Bitte warten..."
 
 #: gui\ShortcutEditorDialog.cpp:36
 msgid "Group Properties"
